Changelog for mk-parallel-dump:

2009-02-01: version 1.0.12

   * CREATE TRIGGER defs were wrongly included in chunk files (issue 223).

2008-12-01: version 1.0.11

   * Updates to shared code.

2008-09-19: version 1.0.10

   * Added option --biggestfirst which is enabled by default (issue 31).
   * --noflushlock and --nolocktables caused a global flush and lock (issue 12).
   * Made debugging code more efficient in non-debug mode.
   * Fixed various bugs in shared code.
   * Moved all command-line documentation to POD.

2008-08-11: version 1.0.9

   * Files downloaded directly from SVN crashed due to version information.
   * Added --progress option.
   * CHANGE MASTER TO in 00_master_data.sql used the I/O thread position.
   * Added features to permit resuming of dumps.
   * --age without --sets did the opposite of what it should (isssue 7)
   * --stopslave died after complaining the slave was not running.

2008-06-02: version 1.0.8

   * System commands did not use double quotes on Windows (bug #1949922).
   * Added --stopslave to run STOP SLAVE during the dump (bug #1923627).
   * --ignoreengine worked only when --tab was specified (bug #1851461).

2008-03-16: version 1.0.7

   * Added --setvars option (bug #1904689, bug #1911371).
   * Added --charset option (bug #1877548).
   * A global database connection was re-used by children, causing a hang.

2008-02-10: version 1.0.6

   * Added the --losslessfp option.
   * Fixed child process exit status on Solaris (bug #1886444).

2008-01-24: version 1.0.5

   * The fix for bug #1863949 added an invalid argument to gzip (bug #1866137)
   * --quiet caused a crash.

2008-01-05: version 1.0.4

   * Second and later chunks had DROP/CREATE TABLE (bug #1863949).
   * Made suffixes for time options optional (bug #1858696).
   * --locktables didn't disable --flushlock.

2007-12-27: version 1.0.3

   * Views with functions caused a crash (bug #1850998, MySQL bug #29408).
   * --ignoreengine was ignored (bug #1851461).
